--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -2400,7 +2400,7 @@
    "source": [
     "\n",
     "### Users that Stayed vs Users that Churned\n",
-    "We can examine behaviour of those who churned vs those who did not churn. First we will visualise those who churned vs those who stayed."
+    "To examine behaviour of those who churned vs those who did not churn,first we will visualise those who churned vs those who stayed."
    ]
   },
   {
