--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -6349,11 +6349,11 @@
     "## Parameters\n",
     "\n",
     "#### NumTrees:\n",
-    "I have chosen to go up to 100 trees to improve performance. Since these trees are individual randomised models in an ensemble there is not a great risk of overfitting with this numTrees parameter.\n",
+    "I have chosen to go up to 150 trees to improve performance. Since these trees are individual randomised models in an ensemble there is not a great risk of overfitting with this numTrees parameter.\n",
     "#### Maxdepth:\n",
-    "I have chosen a max of 15 to reduce the possibility of overfitting. Anything over 15 would increase the risk of overfitting greatly.\n",
+    "I have chosen a max of 15 to reduce the possibility of overfitting\n",
     "#### Numfolds: \n",
-    "I originally had numFolds = 5 but had to change to 3 to speed up the process."
+    "I took 3 to speed up the process which was 5 earlier."
    ]
   },
   {
